Bug 254610 - Okular crashes always when opening particular djvu file
Summary: Okular crashes always when opening particular djvu file
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: DjVu backend (other bugs)
Version First Reported In: 0.10.4
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-19 02:11 UTC by Roman
Modified: 2010-10-23 20:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman 2010-10-19 02:11:58 UTC
Application: okular (0.10.4)
KDE Platform Version: 4.4.4 (KDE 4.4.4) "release 3"
Qt Version: 4.6.3
Operating System: Linux 2.6.31.12-0.2-pae i686
Distribution: "openSUSE 11.2 (i586)"

-- Information about the crash:
Every time I open particular djvu file okular crashes.

Please feel free to ask the file I was opening.

The crash can be reproduced every time.

 -- Backtrace:
Application: Okular (okular), signal: Segmentation fault
[KCrash Handler]
#6  0xb2344324 in KDjVu::Page::width (this=0x0) at /usr/src/debug/kdegraphics-4.4.4/okular/generators/djvu/kdjvu.cpp:172
#7  0xb234269f in DjVuGenerator::convertKDjVuLink (this=0x831de90, page=230, link=0x83cbfa0) at /usr/src/debug/kdegraphics-4.4.4/okular/generators/djvu/generator_djvu.cpp:359
#8  0xb2342f19 in DjVuGenerator::loadPages (this=0x831de90, pagesVector=..., rotation=0) at /usr/src/debug/kdegraphics-4.4.4/okular/generators/djvu/generator_djvu.cpp:295
#9  0xb2343257 in DjVuGenerator::loadDocument (this=0x831de90, fileName=..., pagesVector=...) at /usr/src/debug/kdegraphics-4.4.4/okular/generators/djvu/generator_djvu.cpp:112
#10 0xb3ceb1a8 in Okular::DocumentPrivate::openDocumentInternal (this=0x81694b8, offer=..., isstdin=false, docFile=..., filedata=...) at /usr/src/debug/kdegraphics-4.4.4/okular/core/document.cpp:644
#11 0xb3cf18bb in Okular::Document::openDocument (this=0x815f2a0, docFile=..., url=..., _mime=...) at /usr/src/debug/kdegraphics-4.4.4/okular/core/document.cpp:1642
#12 0xb3dd7d53 in Okular::Part::openFile (this=0x812ea48) at /usr/src/debug/kdegraphics-4.4.4/okular/part.cpp:930
#13 0xb77d5517 in KParts::ReadOnlyPart::openUrl (this=0x812ea48, url=...) at /usr/src/debug/kdelibs-4.4.4/kparts/part.cpp:557
#14 0xb3dca65e in Okular::Part::openUrl (this=0x812ea48, _url=...) at /usr/src/debug/kdegraphics-4.4.4/okular/part.cpp:1049
#15 0x08050274 in Shell::openUrl (this=0x80b44f8, url=...) at /usr/src/debug/kdegraphics-4.4.4/okular/shell/shell.cpp:130
#16 0x08050396 in Shell::delayedOpen (this=0x80b44f8) at /usr/src/debug/kdegraphics-4.4.4/okular/shell/shell.cpp:113
#17 0x08050c2c in Shell::qt_metacall (this=0x80b44f8, _c=InvokeMetaMethod, _id=57, _a=0xbfa4300c) at /usr/src/debug/kdegraphics-4.4.4/build/okular/shell/shell.moc:94
#18 0xb6cdbb2d in QMetaObject::metacall (object=0x80b44f8, cl=3053286304, idx=57, argv=0xbfa4300c) at kernel/qmetaobject.cpp:237
#19 0xb6cead80 in QMetaObject::activate (sender=0x82df770, m=0xb6ded188, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3295
#20 0xb6cf26b5 in QSingleShotTimer::timeout (this=0x82df770) at .moc/release-shared/qtimer.moc:82
#21 0xb6cf27ec in QSingleShotTimer::timerEvent (this=0x82df770) at kernel/qtimer.cpp:308
#22 0xb6ce74d4 in QObject::event (this=0x82df770, e=0x163) at kernel/qobject.cpp:1212
#23 0xb61ffe3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#24 0xb6206c78 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#25 0xb726ed21 in KApplication::notify (this=0xbfa43920, receiver=0x82df770, event=0xbfa43560) at /usr/src/debug/kdelibs-4.4.4/kdeui/kernel/kapplication.cpp:302
#26 0xb6cd671e in QCoreApplication::notifyInternal (this=0xbfa43920, receiver=0x82df770, event=0xbfa43560) at kernel/qcoreapplication.cpp:726
#27 0xb6d06b2e in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qcoreapplication.h:215
#28 QTimerInfoList::activateTimers (event=<value optimized out>, receiver=<value optimized out>) at kernel/qeventdispatcher_unix.cpp:618
#29 0xb6d036b2 in timerSourceDispatch (source=0x8074570) at kernel/qeventdispatcher_glib.cpp:184
#30 0xb58754c2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#31 0xb5878d98 in ?? () from /usr/lib/libglib-2.0.so.0
#32 0xb5878ebe in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#33 0xb6d03381 in QEventDispatcherGlib::processEvents (this=0x805d5f8, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#34 0xb62c0c3a in ?? () from /usr/lib/libQtGui.so.4
#35 0xb6cd4d8d in QEventLoop::processEvents (this=0xbfa43824, flags=) at kernel/qeventloop.cpp:149
#36 0xb6cd51d9 in QEventLoop::exec (this=0xbfa43824, flags=...) at kernel/qeventloop.cpp:201
#37 0xb6cda480 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#38 0xb61ffee4 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#39 0x0804ef29 in main (argc=6, argv=0xbfa43b04) at /usr/src/debug/kdegraphics-4.4.4/okular/shell/main.cpp:82

Reported using DrKonqi
Comment 1 Albert Astals Cid 2010-10-19 09:52:27 UTC
Please attach the file to the bug report
Comment 2 Roman 2010-10-19 13:03:39 UTC
Unfortunately file size is bigger then 1000K so I uploaded it to file sharing service. The link http://depositfiles.com/files/t2bukrunw .

Thanks!
Comment 3 Pino Toscano 2010-10-19 21:37:36 UTC
Thanks for the document, good case indeed.
Looks like it is a similar case of the fix I recently did (in the development version) to support the links to named pages whose names are only numbers, but for the TOC items.
Comment 4 Pino Toscano 2010-10-23 19:59:15 UTC
SVN commit 1189015 by pino:

do not crash when handling links pointing to pages not in the document

CCBUG: 254610


 M  +3 -1      generator_djvu.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1189015
Comment 5 Pino Toscano 2010-10-23 20:00:05 UTC
SVN commit 1189016 by pino:

do not crash when handling links pointing to pages not in the document

BUG: 254610
FIXED-IN: 4.5.3


 M  +3 -1      generator_djvu.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1189016