do not crash when handling links pointing to pages not in the document

BUG: 254610
FIXED-IN: 4.5.3

svn path=/branches/KDE/4.5/kdegraphics/okular/; revision=1189016